# sith_recruiting_service

./: .gitignore  README.md  launcher.bat  pyproject.toml  ruff.toml  run.bat
bars_group_task/: launcher.bat  manage.py  requirements.txt
bars_group_task/bars_group_task/: settings.py  urls.py  wsgi.py
bars_group_task/conf/: local.conf
bars_group_task/json/: questions.json  sith.json
bars_group_task/main_app/: forms.py  urls.py  views.py
bars_group_task/recruits_app/: admin.py  apps.py  models.py
bars_group_task/sith_app/: forms.py  models.py  views.py
bars_group_task/static/js/: delete_button.js
recruitment/: pyproject.toml
recruitment/recruitment/: clean_db.py  common.py
recruitment/recruitment/core/: settings.py
recruitment/recruitment/json/: planets.json  questions.json  sith.json
recruitment/recruitment/logs/: log_config.py
recruitment/recruitment/main_app/: admin.py  apps.py  forms.py  models.py  views.py
recruitment/recruitment/main_app/management/commands/: fill_db.py
recruitment/recruitment/main_app/migrations/: 0001_initial.py
recruitment/recruitment/main_app/templates/main_app/: base.html  index.html  login.html  questionset_list.html  to_sith.html
recruitment/recruitment/recruits_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recruitment/recruitment/recruits_app/migrations/: 0001_initial.py
recruitment/recruitment/recruits_app/templates/recruits_app/: register.html  result.html
recruitment/recruitment/sith_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recruitment/recruitment/sith_app/migrations/: 0001_initial.py
recruitment/recruitment/sith_app/templates/sith_app/: index.html  shadow_hands_list.html  sith_list.html
src/recruitment/: common.py
src/recruitment/conf/: local.conf
src/recruitment/core/: settings.py  urls.py
src/recruitment/logs/: log_config.py
src/recruitment/main_app/: admin.py  urls.py  views.py
src/recruitment/recruits_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/recruitment/sith_app/: admin.py  urls.py  views.py
(+15 files in other folders)
