[project]
name = "recruitment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    {name = "AlbertFarkhutdinov",email = "albertfarhutdinov@gmail.com"}
]
dependencies = [
    "django (<6.0)",
    "django-bootstrap-v5",
    "pillow (<12.3)",
]

[dependency-groups]
dev = [
    "pytest (<10.0)",
    "pytest-cov (<8.0)",
    "ruff (<1.0)",
    "wemake-python-styleguide (<2.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
